# LeGO-LOAM-SR

./: .gitmodules  Fusion_AccBias_Data.txt  Fusion_Att_Data.txt  Fusion_Pose_Data.txt  Fusion_Vel_Data.txt
LeGO-LOAM/: CMakeLists.txt
LeGO-LOAM/config/: loam_config.yaml
LeGO-LOAM/include/lego_loam/: tictoc.h  utility.h
LeGO-LOAM/launch/: run.launch.py
LeGO-LOAM/log/: latest_list
LeGO-LOAM/rosbag/rosbag2_2024_01_10-21_59_40/: metadata.yaml  rosbag2_2024_01_10-21_59_40_0.db3
LeGO-LOAM/rosbag/rosbag2_2024_01_10-22_01_05/: metadata.yaml
LeGO-LOAM/rviz/: test.rviz
LeGO-LOAM/src/: CMakeLists.txt  Fusion_Att_Data.txt  Fusion_GyroBias_Data.txt  Fusion_Pose_Data.txt  Fusion_Vel_Data.txt  HelloWorld.cpp  MatrixUtils.cpp  MatrixUtils.h  approx_dirac.cpp  approx_dirac.h  featureAssociation.cpp  featureAssociation.h  imageProjection.cpp  imageProjection.h  main.cc  main.cpp  mapOptimization.h  mapOptmization.cpp  matplotplusplus  myESKF.cpp  myESKF.h  myexpm.cpp  myexpm.h  nlohmann  publishHighDenseMap.cpp  publishHighDenseMap.h  transformFusion.cpp  transformFusion.h  vector.csv
LeGO-LOAM/src/MeaCovFromMatlab/MeaCov2C_pkg/: MeaCov2C.cpp  MeaCov2C.h  MeaCov2C_data.cpp  MeaCov2C_data.h  MeaCov2C_initialize.cpp  MeaCov2C_initialize.h  MeaCov2C_terminate.cpp  MeaCov2C_terminate.h  MeaCov2C_types.h  buildInfo.mat  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
LeGO-LOAM/src/VirtualDataFromMatlab/: EncoderData.json  GroundTruthData.json  IMUData.json  LidarData.json
LeGO-LOAM/test/: AGPC_Detection.cpp  GroundPlaneFactor_test.cpp  backup.txt
Result/0121gt預補償/: LocalInfo.pcd  MapIterTimes.txt  cornerMap.pcd  denseCloud.pcd  finalCloud.pcd  mapt.txt  pose.txt  surfaceMap.pcd  trajectory.pcd
Result/0318-edgethreshold0.005_planethreshold0.005_with_shadow/: LocalInfo.pcd  MapIterTimes.txt  cornerMap.pcd  denseCloud.pcd  finalCloud.pcd  mapt.txt  pose.txt  surfaceMap.pcd  trajectory.pcd
Result/0318-edgethreshold0.005_planethreshold0.005_without_shadow/: LocalInfo.pcd  cornerMap.pcd  denseCloud.pcd  finalCloud.pcd  mapt.txt  pose.txt  surfaceMap.pcd  trajectory.pcd
Result/0318-edgethreshold0.005_planethreshold0.1_with_shadow/: LocalInfo.pcd  MapIterTimes.txt  cornerMap.pcd  denseCloud.pcd  finalCloud.pcd  mapt.txt  pose.txt  surfaceMap.pcd  trajectory.pcd
Result/0318-edgethreshold0.005_planethreshold0.1_without_shadow/: LocalInfo.pcd  MapIterTimes.txt  cornerMap.pcd  denseCloud.pcd  finalCloud.pcd  mapt.txt  pose.txt  surfaceMap.pcd  trajectory.pcd
Result/0318-edgethreshold0.03_planethreshold0.03_with_shadow/: LocalInfo.pcd  MapIterTimes.txt  cornerMap.pcd  denseCloud.pcd  finalCloud.pcd  mapt.txt  pose.txt  surfaceMap.pcd  trajectory.pcd
Result/0318-edgethreshold0.03_planethreshold0.03_without_shadow/: LocalInfo.pcd  MapIterTimes.txt  cornerMap.pcd  denseCloud.pcd  finalCloud.pcd  mapt.txt  pose.txt  surfaceMap.pcd  trajectory.pcd
Result/0318_test/: LocalInfo.pcd  MapIterTimes.txt  cornerMap.pcd  denseCloud.pcd  finalCloud.pcd  mapt.txt  pose.txt  surfaceMap.pcd  trajectory.pcd
Result/0329HighDenseMap/: LocalInfo.pcd  MapIterTimes.txt  mapt.txt  (+6 more)
install/: local_setup.sh  setup.sh
log/: latest_build
(+23 files in other folders)
